# json-ls

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/plans/: distribution-roadmap.md
src/: backend.rs  completion.rs  config.rs  diagnostics.rs  document.rs  hover.rs  main.rs  position.rs
src/schema/: cache.rs  loader.rs  mod.rs  navigator.rs
tests/: lsp_harness.rs
tests/fixtures/: invalid-instance.json  malformed.json  no-schema.json  simple-schema.json  valid-instance.json
