[package]
name = "json-ls"
version = "0.1.1"
edition = "2021"
description = "A JSON LSP server with automatic $schema-driven validation, hover, and completion"
license = "MIT"
repository = "https://github.com/blvp/json-ls.nvim"

[[bin]]
name = "json-ls"
path = "src/main.rs"

[dependencies]
tower-lsp   = "0.20"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
jsonschema  = "0.42"
ropey       = "1.6"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
moka        = { version = "0.12", features = ["future"] }
dashmap     = "6"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
